MNIST benchmark can be compiled.